--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                 <i class="fas fa-bars menu__icono"></i><span class="menu__texto">menu</span>
             </button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">home</a></li>
-                <li><a class="dropdown-item" href="#">about us</a></li>
-                <li><a class="dropdown-item" href="#">work</a></li>
-                <li><a class="dropdown-item" href="#">our team</a></li>
-                <li><a class="dropdown-item" href="#">find us</a></li>
-                <li><a class="dropdown-item d-block d-sm-none" href="#">contact</a></li>
+                <li><a class="dropdown-item" href="./index.html">inicio</a></li>
+                <li><a class="dropdown-item" href="#">about</a></li>
+                <li><a class="dropdown-item" href="./views/projects.html">proyectos</a></li>
+                <li><a class="dropdown-item" href="#">nuestro equipo</a></li>
+                <li><a class="dropdown-item" href="#">encuentranos</a></li>
+                <li><a class="dropdown-item d-block d-sm-none" href="./views/contact.html">contacto</a></li>
             </ul>
         </div>
         <div class="branding text-center">
@@ -53,7 +53,7 @@
                 <img class="menu__icono" src="./assets/img/Ellipse.png" alt="Contacto Icono"><span class="menu__texto">contacto</span>
             </a>
         </div>
-    </div>    
+    </div>  
     <section class="home vh-100">
         <div class="container-fluid vh-100">
             <div class="row vh-100">
