--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </a>
         </div>
         <div class="btn-group d-none d-sm-flex">
-            <a class="btn btn-light btn-lg dropdown-toggle" href="#">
+            <a class="btn btn-light btn-lg dropdown-toggle" href="./views/contact.html">
                 <img class="menu__icono" src="./assets/img/Ellipse.png" alt="Contacto Icono"><span class="menu__texto">contacto</span>
             </a>
         </div>
